Update README with JavaFX setup instructions
Added instructions for running the program in Eclipse with JavaFX.