@@ -1,2 +1,6 @@
 # GA-Met-Opt-UAVSwarm
 An Improved Genetic Algorithm (GA) to solve the Multiple Depot Vehicle Routing Problem (MDVRP) for cooperative UAV swarm sensing in complex urban environments. The primary objective is to minimize the total mission completion time (makespan) for a fleet of UAVs operating from multiple depots to service distributed sensing tasks.
+
+Note: This program is written in Java. To run it in Eclipse, you need to set the following VM arguments:
+--module-path "C:\path\to\your\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.swing
+Replace "C:\path\to\your\javafx-sdk-23.0.1\lib" with the actual path to your JavaFX SDK lib folder.
